@@ -86,6 +86,9 @@ Extension Modules
 Library
 -------
 
+- Bug #1163325:  Decimal infinities failed to hash.  Attempting to
+  hash a NaN raised an InvalidOperation instead of a TypeError.
+
 - Patch #918101: Add tarfile open mode r|* for auto-detection of the 
   stream compression; add, for symmetry reasons, r:* as a synonym of r.
 
